--- a/Sales/Sales.iOS/Sales.iOS.csproj
+++ b/Sales/Sales.iOS/Sales.iOS.csproj
@@ -91,6 +91,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Implementations\Localize.cs" />
+    <Compile Include="Implementations\PathService.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
@@ -152,6 +153,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
     </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.5.231</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.2.0</Version>
     </PackageReference>
@@ -177,9 +181,6 @@
     <BundleResource Include="Resources\ic_action_add_circle.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\ic_launcher.png" />
-  </ItemGroup>
-  <ItemGroup>
     <BundleResource Include="Resources\facebook_logo.png" />
   </ItemGroup>
   <ItemGroup>
@@ -199,5 +200,8 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\ic_phonelink_setup.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_launcher.png" />
   </ItemGroup>
 </Project>
